<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deal_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:orientation="horizontal"
    android:padding="5dp">

  <FrameLayout
      android:layout_width="@dimen/deal_list_item_image_size"
      android:layout_height="@dimen/deal_list_item_image_size">

    <ImageView
        android:id="@+id/product_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:contentDescription="@string/product_accessibility_description"
        tools:visibility="visible"
        tools:src="@drawable/product_test_img" />

    <ProgressBar
        android:id="@+id/product_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indeterminateTint="@color/colorPrimary"
        tools:visibility="invisible" />

  </FrameLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <TextView
        android:id="@+id/deal_list_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:lines="2"
        android:textSize="18sp"
        android:textColor="@color/gray_color"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

      <TextView
          android:id="@+id/deal_list_item_price"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          app:layout_constraintTop_toBottomOf="@id/divider"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          tools:text="$9.00" />

    <TextView
        android:id="@+id/ship_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/ship"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/or_txt"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/or_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/or"
        android:textColor="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/aisle_txt"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/aisle_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/aisle_circle"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/red_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:text="B2" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
